package com.example.BMS.models;

public enum SeatType {
    NORMAL, PREMIUM, VIP, RECLINER
}
