package com.example.BMS.models;

public enum ShowSeatStatus {
    AVAILABLE, BOOKED, BLOCKED, LOCKED
}