package com.example.BMS.models;


public enum TicketStatus {
    BOOKED, CANCELLED, PENDING
}
